DuPont DevSB/src/objects/pse__ColumnPreferences__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>pse__Field__c</fullName>
        <inlineHelpText>Contains one or more API names for the fields, including cross-object fields, this column is based on. System generated field; do not edit manually.</inlineHelpText>
        <label>Field</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Order__c</fullName>
        <inlineHelpText>This setting defines the preferred order of this column. You can enter non-contiguous values.</inlineHelpText>
        <label>Order</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Visible__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>This setting determines whether this column is visible by default.</inlineHelpText>
        <label>Visible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Width__c</fullName>
        <inlineHelpText>This setting defines the width of this column, in pixels.</inlineHelpText>
        <label>Width</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Column Preferences</label>
</CustomObject>